# investment-researcher

./: .env.example  .env.test  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: chat-eval-questions.md
docs/architecture/: 00-strategic-rationale.md  01-system-overview.md  02-graph-schema.md  03-data-ingestion.md  04-agent-system.md  05-tech-stack.md  06-deployment.md  07-phased-roadmap.md  08-hardware-requirements.md  09-monetization-strategy.md
frontend/: Dockerfile  app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/components/: EChart.client.vue
frontend/components/company/: BalanceSheetTab.vue  KpiCards.vue  (+8 more)
frontend/composables/: useChat.ts  useCompany.ts  useFinancials.ts  useSearch.ts
frontend/layouts/: default.vue
frontend/lib/: api.ts  charts.ts  financialTables.ts  formatters.ts
frontend/pages/: index.vue
frontend/plugins/: echarts.client.ts
scripts/: build_golden_data.py  build_golden_ratios.py  build_golden_ttm_ratios.py  run_live_chat_eval.py
src/investment_researcher/: __init__.py  cli.py  config.py  metrics.py  ratios.py  service.py  signs.py
tests/: __init__.py  conftest.py  test_api.py  test_build_golden_data.py  test_chat_agent.py  test_chat_eval.py  test_cli.py  test_config.py  test_extraction.py  test_golden_companies.py  test_insider_trades.py  test_quarter_decomposition.py  test_ratio_derivations.py  test_ratios.py  test_sec_filing_tools.py  test_service.py  test_state.py  test_storage.py  test_timeseries.py  test_ttm_metrics.py
tests/fixtures/: chat_eval_questions.py  golden_aapl.py  golden_amzn.py  golden_helpers.py  golden_nvda.py  golden_ratios_aapl.py  golden_ratios_amzn.py  golden_ratios_nvda.py  golden_ratios_unh.py  golden_ratios_wmt.py  golden_ratios_xom.py  golden_ttm_ratios_aapl.py  golden_ttm_ratios_amzn.py  golden_ttm_ratios_nvda.py  golden_ttm_ratios_unh.py  golden_ttm_ratios_wmt.py  golden_ttm_ratios_xom.py  golden_unh.py  golden_wmt.py  golden_xom.py
(+44 files in other folders)
