[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "investment-researcher"
version = "0.1.0"
description = "SEC data pipeline and investment research platform"
requires-python = ">=3.12"
dependencies = [
    "edgartools==5.28.2",
    "duckdb>=1.0",
    "prefect>=3.0",
    "python-dotenv>=1.0",
    "pandas>=2.0",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "sse-starlette>=2.0",
    "openai>=1.0",
    "openai-agents>=0.14.0",
    "langfuse>=4.5.1",
    "openinference-instrumentation-openai-agents>=1.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
ir-rerun-slow-path = "investment_researcher.cli:rerun_slow_path_cli"
ir-normalize-metric-signs = "investment_researcher.cli:normalize_metric_signs_cli"

[tool.hatch.build.targets.wheel]
packages = ["src/investment_researcher"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests/fixtures"]
markers = [
    "integration: tests that hit the real SEC EDGAR API (slow, requires network)",
]
